<resources>
    <string name="app_name">StoreOC</string>
    <!--<string name="domain">http://mytestapp.zzz.com.ua/</string>-->
    <string name="domain">http://10.0.2.2/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reviews">Відгуки (0)</string>
    <string name="characteristics">Характеристики</string>
    <string name="full_description">Повний опис</string>
    <string name="name">Name</string>
    <string name="in_cart">В кошик</string>
    <string name="default_price"> грн</string>
    <string name="desc">Опис</string>
    <string name="close">Закрити</string>
    <string name="error_min_symbol">Поле має містити 2 і більше символа.</string>
    <string name="hint_name">Ім\'я</string>
    <string name="hint_review_text">Текст відгуку</string>
    <string name="text_rate">Оцініть товар.</string>
    <string name="send">Відправити</string>
    <string name="cart_empty">Кошик порожній</string>
    <string name="cart_order">Оформити замовлення</string>
    <string name="hint_surname">Прізвище</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_tel">Телефон</string>
    <string name="hint_address">Адреса</string>
    <string name="confirm">Підтвердити</string>
</resources>
