<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.store.oc.ReviewActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:showIn="@layout/app_bar_review">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/add_review_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/send_name_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ff0000"
                    android:layout_marginBottom="-10dp"
                    android:visibility="gone"
                    android:text="@string/error_min_symbol" />

                <EditText
                    android:id="@+id/send_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_name" />
                <TextView
                    android:id="@+id/send_text_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ff0000"
                    android:layout_marginBottom="-10dp"
                    android:visibility="gone"
                    android:text="@string/error_min_symbol" />

                <EditText
                    android:id="@+id/send_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_review_text"/>
                <TextView
                    android:id="@+id/send_rating_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ff0000"
                    android:layout_marginBottom="-10dp"
                    android:visibility="gone"
                    android:text="@string/text_rate" />
                <RatingBar
                    android:id="@+id/send_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    android:rating="0"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffbbbbbb"
                    android:text="@string/send" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
